@@ -1351,7 +1351,8 @@ class LMSHelpdeskManager extends LMSManager implements LMSHelpdeskManagerInterfa
 			'critical' => 0,
 			'urgent' => 0,
 			'unread' => 0,
-            'expired' => 0
+            'expired' => 0,
+            'expired2' => 0,
 		);
 
 		if (ConfigHelper::CheckPrivilege('timetable_management')) {
@@ -1369,6 +1370,8 @@ class LMSHelpdeskManager extends LMSManager implements LMSHelpdeskManagerInterfa
 				'rights' => RT_RIGHT_INDICATOR));
             $result['expired'] = $this->GetQueueContents(array('count' => true, 'state' => -1, 'deadline' => -2,
                 'owner' => Auth::GetCurrentUser(), 'rights' => RT_RIGHT_INDICATOR));
+            $result['expired2'] = $this->GetQueueContents(array('count' => true, 'state' => -1, 'deadline' => -2,
+                'verifierids' => Auth::GetCurrentUser(), 'rights' => RT_RIGHT_INDICATOR));
 		}
 
 		return $result;
